Asteroids/doc/logfile.txt
Project documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-sourcepath
C:\Users\Draykon\Desktop\APCS Projects\Asteroids
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Users\Draykon\Desktop\APCS Projects\images jar.jar;C:\Program Files (x86)\BlueJ\lib\userlib\images jar.jar;C:\Users\Draykon\Desktop\APCS Projects\processing-3.2.3-windows64\processing-3.2.3\core\library\core.jar;C:\Users\Draykon\Desktop\Test Zone\aplu5.jar;C:\Users\Draykon\Desktop\APCS Projects\processing-3.2.3-windows64\processing-3.2.3\modes\java\reference\libraries\sound;C:\Program Files (x86)\BlueJ\lib\userlib\images jar.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\Draykon\Desktop\APCS Projects\Asteroids
-d
C:\Users\Draykon\Desktop\APCS Projects\Asteroids\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
-doctitle
Asteroids
-windowtitle
Asteroids
-author
-version
-nodeprecated
-package
-link
http://download.oracle.com/javase/8/docs/api/
C:\Users\Draykon\Desktop\APCS Projects\Asteroids/Floater.java
C:\Users\Draykon\Desktop\APCS Projects\Asteroids/Bullet.java
C:\Users\Draykon\Desktop\APCS Projects\Asteroids/Asteroid.java
C:\Users\Draykon\Desktop\APCS Projects\Asteroids/GhostShip.java
C:\Users\Draykon\Desktop\APCS Projects\Asteroids/SpaceShip.java
C:\Users\Draykon\Desktop\APCS Projects\Asteroids/Star.java
C:\Users\Draykon\Desktop\APCS Projects\Asteroids/PowerUp.java
C:\Users\Draykon\Desktop\APCS Projects\Asteroids/AsteroidsGame.java
<---- end of javadoc command ---->
Loading source file C:\Users\Draykon\Desktop\APCS Projects\Asteroids\Floater.java...
Loading source file C:\Users\Draykon\Desktop\APCS Projects\Asteroids\Bullet.java...
Loading source file C:\Users\Draykon\Desktop\APCS Projects\Asteroids\Asteroid.java...
Loading source file C:\Users\Draykon\Desktop\APCS Projects\Asteroids\GhostShip.java...
Loading source file C:\Users\Draykon\Desktop\APCS Projects\Asteroids\SpaceShip.java...
Loading source file C:\Users\Draykon\Desktop\APCS Projects\Asteroids\Star.java...
Loading source file C:\Users\Draykon\Desktop\APCS Projects\Asteroids\PowerUp.java...
Loading source file C:\Users\Draykon\Desktop\APCS Projects\Asteroids\AsteroidsGame.java...
C:\Users\Draykon\Desktop\APCS Projects\Asteroids\AsteroidsGame.java:227: error: ';' expected
                bulletFire.setFramePosition(0)
                                              ^
1 error
